--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
--map/src/index.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -38,9 +37,9 @@
             <div class="input-group">
                 <label>Fortbewegungsart:</label>
                 <div class="transport-modes">
-                    <button id="walking" class="mode-btn active">Zu Fuß</button>
-                    <button id="biking" class="mode-btn">Fahrrad</button>
-                    <button id="driving" class="mode-btn">Auto</button>
+                    <button id="walking" class="transport-mode active" data-mode="walking">Zu Fuß</button>
+                    <button id="biking" class="transport-mode" data-mode="biking">Fahrrad</button>
+                    <button id="driving" class="transport-mode" data-mode="driving">Auto</button>
                 </div>
             </div>
             
@@ -63,6 +62,8 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/travelCircle.js"></script>
+    <script src="js/weather.js"></script>
+    <script src="js/isochrones.js"></script>
     <script src="js/map.js"></script>
     <script src="js/main.js"></script>
 </body>
