Add POI script and styles for terrain and transport modes

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script src="js/weather.js"></script>
     <script src="js/isochrones.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/pois.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
