Add KML export button and script reference

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             
             <button id="calculate-btn">Radius berechnen</button>
             <button id="clear-btn">Alles löschen</button>
+            <button id="export-kml-btn" class="export-btn">
+                <i class="fa fa-download"></i> Als KML exportieren
+            </button>
             
             <div class="circles-list">
                 <h4>Gespeicherte Kreise</h4>
@@ -66,6 +69,7 @@
     <script src="js/isochrones.js"></script>
     <script src="js/map.js"></script>
     <script src="js/pois.js"></script>
+    <script src="js/kmlExport.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
